style: ensure visibility of h1

--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,7 @@ h1 {
   white-space: nowrap;
   font-size: 32pt;
   transform: rotate(-2deg);
+  visibility: visible;
 }
 
 h1:hover {
